# fourlangs

./: README.md  in.csv  out.csv
MTBankToHomeMoneyJ/: .gitignore  pom.xml
MTBankToHomeMoneyJ/src/main/java/info/dnnx/: HMRecord.java  MTRecord.java  Main.java
MTBankToHomemoney/: LICENSE  MTBankToHomemoney.cabal  stack.yaml
MTBankToHomemoney/app/: Main.hs
MTBankToHomemoney/src/: Types.hs
mt2hm_ex/: README.md  mix.exs
mt2hm_ex/config/: config.exs
mt2hm_ex/lib/: mt2hm_ex.ex
mt2hm_ex/test/: mt2hm_ex_test.exs
mtbank2homemoney/: convert.rb
