name:                MTBankToHomemoney
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/DNNX/MTBankToHomemoney#readme
license:             BSD3
license-file:        LICENSE
author:              Viktar Basharymau
maintainer:          viktar.basharymau@gmail.com
copyright:           Viktar Basharymau
category:            Command Line Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , cassava
  default-language:    Haskell2010

executable MTBankToHomemoney-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MTBankToHomemoney
                     , temporary
                     , text-regex-replace
                     , bytestring
                     , cassava
                     , text
                     , text-icu
                     , vector
  default-language:    Haskell2010

test-suite MTBankToHomemoney-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MTBankToHomemoney
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DNNX/MTBankToHomemoney
